Closed
Bug 1881896
Opened 1 year ago
Closed 1 year ago
ClientWebGLContext::BindAttribLocation
Categories
(Core :: Graphics: CanvasWebGL, defect)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
125 Branch
| Tracking | Status | |
|---|---|---|
| firefox125 | --- | fixed |
People
(Reporter: zhanghe9702, Assigned: zhanghe9702)
Details
Attachments
(2 files, 3 obsolete files)
User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
Steps to reproduce:
source code looks like using an error FuncScope name
| Assignee | ||
Comment 1•1 year ago
|
||
| Assignee | ||
Comment 2•1 year ago
|
||
| Assignee | ||
Comment 3•1 year ago
|
||
Updated•1 year ago
|
Assignee: nobody → zhanghe9702
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment 4•1 year ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Component: Untriaged → Widget: Gtk
Product: Firefox → Core
| Assignee | ||
Comment 5•1 year ago
|
||
Updated•1 year ago
|
Attachment #9382438 -
Attachment is obsolete: true
Updated•1 year ago
|
Attachment #9382438 -
Attachment is obsolete: false
Updated•1 year ago
|
Attachment #9382439 -
Attachment is obsolete: true
Updated•1 year ago
|
Attachment #9382440 -
Attachment is obsolete: true
Updated•1 year ago
|
Attachment #9382438 -
Attachment is obsolete: true
| Assignee | ||
Updated•1 year ago
|
Component: Widget: Gtk → Graphics: CanvasWebGL
Comment 6•1 year ago
|
||
Thanks!
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/64eb0616a615
fixed FuncScope of ClientWebGLContext::BindAttribLocation, just correct function name. r=jgilbert
Comment 8•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox125:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•