Bug 1881896 - fixed FuncScope of ClientWebGLContext::BindAttribLocation, just correct function name. r=jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D202652